--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "@types/react-dom": "^17.0.11",
     "@types/styled-components": "^5.1.22",
     "@types/websocket": "^1.0.5",
+    "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "react-test-renderer": "^17.0.2",
     "rxjs": "^7.5.2",
+    "socket.io": "^4.4.1",
+    "socket.io-client": "^4.4.1",
     "styled-components": "^5.3.3",
     "ts-jest": "^27.1.3",
     "ts-node": "^10.5.0",
