--- a/package.json
+++ b/package.json
@@ -6,26 +6,18 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.4.0",
-    "@types/node": "^16.11.22",
-    "@types/react": "^17.0.39",
-    "@types/react-dom": "^17.0.11",
-    "@types/styled-components": "^5.1.22",
-    "@types/websocket": "^1.0.5",
     "axios": "^0.26.0",
     "formik": "^2.2.9",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0",
-    "react-test-renderer": "^17.0.2",
-    "rxjs": "^7.5.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "^5.0.1",
+    "react-test-renderer": "^18.2.0",
     "socket.io": "^4.4.1",
     "socket.io-client": "^4.4.1",
-    "styled-components": "^5.3.3",
-    "ts-jest": "^27.1.3",
-    "ts-node": "^10.5.0",
-    "typescript": "^4.5.5",
-    "web-vitals": "^2.1.4"
+    "styled-components": "^5.3.6",
+    "ts-jest": "^29.0.3",
+    "typescript": "^4.9.4",
+    "uuid": "^9.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -52,6 +44,13 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.2.4"
+    "@types/uuid": "^9.0.0",
+    "tailwindcss": "^3.2.4",
+    "@types/jest": "^27.4.0",
+    "@types/node": "^16.11.22",
+    "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.11",
+    "@types/styled-components": "^5.1.22",
+    "@types/websocket": "^1.0.5"
   }
 }
