--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^0.26.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -15,14 +14,13 @@
     "socket.io": "^4.4.1",
     "socket.io-client": "^4.4.1",
     "styled-components": "^5.3.6",
-    "ts-jest": "^29.0.3",
     "typescript": "^4.9.4",
     "uuid": "^9.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "jest",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -44,13 +42,12 @@
     ]
   },
   "devDependencies": {
-    "@types/uuid": "^9.0.0",
-    "tailwindcss": "^3.2.4",
     "@types/jest": "^27.4.0",
-    "@types/node": "^16.11.22",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "@types/styled-components": "^5.1.22",
-    "@types/websocket": "^1.0.5"
+    "@types/uuid": "^9.0.0",
+    "@types/websocket": "^1.0.5",
+    "tailwindcss": "^3.2.4"
   }
 }
