--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "uuid": "^9.0.0"
   },
   "scripts": {
+    "shadow:watch": "shadow-cljs watch app",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -46,6 +47,9 @@
     "tailwindcss": "^3.2.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^14.4.3"
+    "@testing-library/user-event": "^14.4.3",
+    "postcss": "^8.4.20",
+    "postcss-cli": "^10.1.0",
+    "shadow-cljs": "^2.20.16"
   }
 }
